--- a/src/app/products/product-list/product-list.component.scss
+++ b/src/app/products/product-list/product-list.component.scss
@@ -75,3 +75,8 @@ border-radius: 25px;
 float: right;
 margin-top: -78px;
 }
+
+.a2{
+  border-left-width: 15px !important;
+  border-radius: 35px;
+margin-top: 15px }
