--- a/src/app/products/checkoutscreen/checkoutscreen.component.html
+++ b/src/app/products/checkoutscreen/checkoutscreen.component.html
@@ -1,46 +1,91 @@
-<mat-tab-group dynamicHeight>
-  <div class="col-md-12">
-      <mat-tab label="Order Summary">
-          <div class="col-md-12" *ngFor="let productJson of productJson;let i=index" style="padding-top:15px !important">
-              <mat-card>
-                  <div class="row">
-                  <div class="col-md-3">
-                      <img  style="width: 200px;height: 200px;"src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg">
-                    </div>
-                <div class="col-md-8">
-                  <table matSort>
-                    <tr>
-                      <th mat-sort-header="name">Product Name/Code/Pack</th>
-                      <th mat-sort-header="calories">Quantity</th>
-                      <th mat-sort-header="fat">TradePrice</th>
-                      <th mat-sort-header="fat">savings</th>
-                      <th mat-sort-header="carbs">Net price</th>
-                    </tr>
-                    <tr>
-                      <td><b>{{productJson.productName}}</b></td>
-                      <td><mat-form-field class="example-full-width">
-                          <input matInput placeholder="Favorite food" [(ngModel)]="productJson.quantity">
-                        </mat-form-field></td>
-                      <td>{{productJson.trideprice}}</td>
-                      <td>{{productJson.savings}}</td>
-                      <td>{{productJson.netprice}}</td>
-                    </tr>
-                  </table>
-                </div>
-                </div>
-              </mat-card>
-            </div>
-        </mat-tab>
-        <mat-tab label="Select Wholesaler">
-          <div class="example-large-box mat-elevation-z4">
-            Large content
+<div class="col-md-12">
+<div class="row">
+  <div class="col-md-8">
+      <mat-tab-group dynamicHeight>
+          <div class="row">
+              <div class="col-md-8">
+                  <mat-tab label="Order Summary">
+                      <div class="col-md-12"  style="padding-top:15px !important">
+                          <div class="col-md-12">
+                              <div class="row">
+                                  <div class="col-md-2"></div>
+                                  <div class="col-md-3">Product Name/Code/Pack</div>
+                                  <div class="col-md-1">Quantity</div>
+                                  <div class="col-md-2">Tride Price</div>
+                                  <div class="col-md-1">Savings</div>
+                                  <div class="col-md-1">Net price</div>
+                              </div>
+                              <div class="col-md-12" *ngFor="let productJson of productJson;let i=index">
+                              
+                                <div class="col-md-12">
+                                    <mat-card  class="a2" [ngStyle]="{'border-left-color':productJson.color}">
+                                        <div class="row">
+                                        <div class="col-md-2"> <img  style="width:100px;height: 100px;"src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
+                                        <div class="col-md-3">{{productJson.productName}}</div>
+                                        <div class="col-md-1">{{productJson.quantity}}</div>
+                                        <div class="col-md-2">{{productJson.trideprice}}</div>
+                                        <div class="col-md-1">{{productJson.savings}}</div>
+                                        <div class="col-md-1">{{productJson.netprice}}</div>
+                                        </div>
+                                        <div class="row">
+                                          <div class="col-md-12">
+                                              <div   style="cursor: pointer;    float: right !important;" (click)="removeItems(productJson,i)">
+                                                  RemoveItems
+                                              </div>
+                                          </div>
+                                            
+                                        </div>
+                                      </mat-card>
+                              </div>
+                            </div>
+                              
+                            </div>
+                        </div>
+                    </mat-tab>
+                    <mat-tab label="Select Wholesaler">
+                      <div class="example-large-box mat-elevation-z4">
+                        Large content
+                      </div>
+                    </mat-tab>
+                    <mat-tab label="Select Wholesaler">
+                      <div class="example-large-box mat-elevation-z4">
+                        Place order
+                      </div>
+                    </mat-tab>
+              </div>
+              
+              
           </div>
-        </mat-tab>
-        <mat-tab label="Select Wholesaler">
-          <div class="example-large-box mat-elevation-z4">
-            Place order
-          </div>
-        </mat-tab>
+          
+          
+          
+        </mat-tab-group>
   </div>
-  
-</mat-tab-group>
+  <div class="col-md-4">
+    <h3>Price Details</h3>
+    <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
+        <!-- Item Column -->
+        <ng-container matColumnDef="item">
+          <th mat-header-cell *matHeaderCellDef> Item </th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
+          <td mat-footer-cell *matFooterCellDef> Total </td>
+        </ng-container>
+      
+        <!-- Cost Column -->
+        <ng-container matColumnDef="cost">
+          <th mat-header-cell *matHeaderCellDef> Cost </th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
+          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+      </table>
+  </div>
+</div>
+</div>
+
+
+
+
