--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -12,53 +12,44 @@
 </div>
 
 <div class="col-md-12">
-  <h1>Products</h1>
   <mat-form-field class="example-full-width-input">
     <input matInput placeholder="Serach for product" [(ngModel)]="searchText">
   </mat-form-field>
 </div>
-<div class="col-md-12" *ngFor="let productJson of productJson | filter : searchText;let i=index" style="padding-top:15px !important">
-  <mat-card [ngStyle]="{'border-left-color':productJson.color}">
-      <div class="row">
-      <div class="col-md-3">
-          <img  style="width: 200px;height: 200px;"src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg">
-        </div>
-    <div class="col-md-8">
-      <table matSort>
-        <tr>
-          <th mat-sort-header="name">Product Name/Code/Pack</th>
-          <th mat-sort-header="calories">Quantity</th>
-          <th mat-sort-header="fat">TradePrice</th>
-          <th mat-sort-header="fat">savings</th>
-          <th mat-sort-header="carbs">Net price</th>
-        </tr>
-        <tr>
-          <td><b>{{productJson.productName}}</b></td>
-          <td><mat-form-field class="example-full-width">
-              <input matInput placeholder="Favorite food" [(ngModel)]="productJson.quantity" value="Sushi">
-            </mat-form-field> {{binding}}</td>
-          <td>{{productJson.trideprice}}</td>
-          <td>{{productJson.savings}}</td>
-          <td>{{productJson.netprice}}</td>
-        </tr>
-      </table>
-      <div class="row">
-          <div class="col-md-3">
-              {{productJson.productInformation}}
-            </div>
-            <div class="col-md-6">
-                <button mat-stroked-button color="primary">Click here to know more info</button>
-              </div>
-        
-      </div>
-      
-      <div *ngFor="let discount of productJson.discount"><b>{{discount}}</b></div>
-    </div>
-    </div>
-    <div >
-        <button class="buttonalign" mat-flat-button color="primary" (click)="addCart(productJson,i)">Add to cart</button>
+
+<div class="col-md-12">
+  <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-3">Product Name/Code/Pack</div>
+      <div class="col-md-1">Quantity</div>
+      <div class="col-md-2">Tride Price</div>
+      <div class="col-md-1">Savings</div>
+      <div class="col-md-1">Net price</div>
+  </div>
+  <div class="col-md-12" *ngFor="let productJson of productJson | filter : searchText;let i=index">
   
-    </div>
-  </mat-card>
+    <div class="col-md-12">
+        <mat-card  class="a2" [ngStyle]="{'border-left-color':productJson.color}">
+            <div class="row">
+            <div class="col-md-2"> <img  style="width:100px;height: 100px;"src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
+            <div class="col-md-3">{{productJson.productName}}</div>
+            <div class="col-md-1">{{productJson.quantity}}</div>
+            <div class="col-md-2">{{productJson.trideprice}}</div>
+            <div class="col-md-1">{{productJson.savings}}</div>
+            <div class="col-md-1">{{productJson.netprice}}</div>
+            <div><img src="./assets/images/Cart_active.png" style="cursor: pointer" (click)="addCart(productJson,i)"></div>
+          </div>
+          <div class="row">
+              <div class="col-md-2"></div>
+              <div class="col-md-4">Product Information Test comes here</div>
+              <div class="col-md-2"></div>
+              <div class="col=md-2"></div>
+              <div class="col-md-1" [ngStyle]="{'color':productJson.color}">Discount:10%</div>
+          </div>
+          </mat-card>
+     
+  </div>
+</div>
+  
 </div>
 <button (click)="clickme()">Testing Purpose  -- Naigating to cart page</button> 
