--- a/src/app/products/checkoutscreen/checkoutscreen.component.html
+++ b/src/app/products/checkoutscreen/checkoutscreen.component.html
@@ -62,26 +62,48 @@
         </mat-tab-group>
   </div>
   <div class="col-md-4">
-    <h3>Price Details</h3>
-    <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
-        <!-- Item Column -->
-        <ng-container matColumnDef="item">
-          <th mat-header-cell *matHeaderCellDef> Item </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
-          <td mat-footer-cell *matFooterCellDef> Total </td>
-        </ng-container>
+    
+     
+<table mdbTable borderless="true" class="table tableAlignment">
       
-        <!-- Cost Column -->
-        <ng-container matColumnDef="cost">
-          <th mat-header-cell *matHeaderCellDef> Cost </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
-          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-      </table>
+    <!--Table head-->
+    <thead>
+  <tr>
+    <th scope="col">PriceDetails</th>
+  </tr>
+</thead>
+    <!--Table head-->
+
+    <!--Table body-->
+   <tbody>
+  <tr class="mt-2" mdbTableCol>
+    <td scope="row">Total MRP</td>
+    <td scope="row">$ 110</td>
+  </tr>
+  <tr class="mt-2" mdbTableCol>
+    <td scope="row">Discout</td>
+    <td scope="row" style="color:green">- $ 10</td>
+  </tr>
+  <tr class="mt-2" mdbTableCol>
+    <td scope="row">Est.Tax</td>
+    <td scope="row">+ $ 10</td>
+  </tr>
+  <tr class="mt-2" mdbTableCol    style="border-bottom: 2px solid #dee2e6;">
+      <td scope="row">Delievery Charges</td>
+      <td style="color:green">free</td>
+    </tr>
+    <tr class="mt-2" mdbTableCol>
+        <td scope="row">Total</td>
+        <td></td>
+      </tr>
+      <tr class="btn-table">
+         <td rowspan="2">
+            <button type="button" class="btn btn-primary">Next</button>
+         </td>
+      </tr>
+</tbody>
+
+  </table>
   </div>
 </div>
 </div>
