--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -133,15 +133,17 @@
             <img class="mr-2"
             src="./assets/images/header_orders.png"
             alt="orders Logo"/>
-          <span >Orders</span>
+          <span [routerLink]="['/products/orders']" >Orders</span>
         </label>
         
       </div>
       <div>
           <label class="mr-5">
+              <span color="primary"
+              matBadge="4" matBadgePosition="before" matBadgeColor="accent"></span>
              <img
              src="./assets/images/header_cart.png"
-             alt="orders Logo" [routerLink]="['/products/checkout']" [routerLinkActive]="['class1']">
+             alt="orders Logo"  [routerLink]="['/products/checkout']" [routerLinkActive]="['class1']">
           </label>
           <label class="mr-1">
              <img
