--- a/src/app/products/checkoutscreen/checkoutscreen.component.html
+++ b/src/app/products/checkoutscreen/checkoutscreen.component.html
@@ -4,212 +4,169 @@
   </div>
 </div>
 
-
-<!-- <nav aria-label="breadcrumb1 container" style="text-align: center;">
-    <div class="a1" style="background-color: #fff">
-
-        <span class="ml-3 mr-4 breadcrumb-item" (click)="selectedTab='Product'">
-            <span [ngClass]="{active:selectedTab=='Product'}" >
-                REVIEW ORDER
-            </span>
-        </span>
-        <span class="ml-3 mr-4 breadcrumb-item"  (click)="selectedTab='Promotions';">
-          <span [ngClass]="{active:selectedTab=='Promotions'}">
-              WHOLESALER 
-          </span>  
-          </span>
-          <span class="ml-3 mr-4 breadcrumb-item"  (click)="selectedTab='Discount'">
-              <span [ngClass]="{active:selectedTab=='Discount'}">
-                  ADDRESS 
-              </span>
-            </span>
-  
-            <span class="ml-3 mr-4 breadcrumb-item"  (click)="selectedTab='Avalible'">
-                <span [ngClass]="{active:selectedTab=='Avalible'}">
-                    PAYMENT
-                </span>
-              </span>
-        </div>
-  </nav> -->
-
-<div *ngIf="productJson.length !=0" class="col-md-12">
+<div class="col-md-12 mt-5"  *ngIf="productJson.length !==0 || productJson.length == undefined ">
   <div class="row">
-    <div class="col-md-8">
-      <!-- <nav aria-label="breadcrumb1 container" style="text-align: center;">
-          <div class="a1" style="background-color: #fff">
-      
-              <span class="ml-3 mr-4 breadcrumb-item" (click)="selectedTab='Product';OrderDetails('product')">
-                  <span [ngClass]="{active:selectedTab=='Product'}" >
-                      REVIEW ORDER
-                  </span>
-              </span>
-              <span class="ml-3 mr-4 breadcrumb-item"  (click)="selectedTab='Promotions';OrderDetails('promotions')">
-                <span [ngClass]="{active:selectedTab=='Promotions'}">
-                    WHOLESALER 
-                </span>  
-                </span>
-                <span class="ml-3 mr-4 breadcrumb-item"  (click)="selectedTab='Discount';OrderDetails('Discount')">
-                    <span [ngClass]="{active:selectedTab=='Discount'}">
-                        ADDRESS 
-                    </span>
-                  </span>
-        
-                  <span class="ml-3 mr-4 breadcrumb-item"  (click)="selectedTab='Avalible';OrderDetails('PAYMENT')">
-                      <span [ngClass]="{active:selectedTab=='Avalible'}">
-                          PAYMENT
-                      </span>
-                    </span>
+      <div class="col-md-9">
+          <nav aria-label="breadcrumb1 container" style="text-align: center;">
+              <div class="a1" style="background-color: #fff">
+                  <span class="ml-3 mr-4 breadcrumb-item" *ngFor="let item of breadcrum;let i=index">
+                      <span [ngClass]="{active:selectedTab == item}" (click)="selectTabClick(i)">
+                        {{item}}
+                        </span>
+                        </span>
+                  </div>
+            </nav>
+      </div>
+      <div class="col-md-3">
+    
+      </div>
+  </div>
+  
+</div>
+
+<div class="col-md-12" *ngIf="productJson.length !==0">
+  <div class="row">
+
+    <div class="col-md-9 mt-3">
+
+      <div class="col-md-12" *ngIf="selectedTab===breadcrum[0]">
+          <div class="col-md-12">
+              <h6 class="ml-5  mt-2">My Cart ({{productJson.length}} Items)</h6>
+              <div class="row" style="font-size: 13px;">
+                <div class="col-md-2"></div>
+                <div class="col-md-3">Product Name/Code/Pack</div>
+                <div class="col-md-1">Quantity</div>
+                <div class="col-md-2">Tride Price</div>
+                <div class="col-md-1">Savings</div>
+                <div class="col-md-2">Net price</div>
               </div>
-        </nav> -->
-      <mat-tab-group dynamicHeight>
-        <div class="row">
-          <div class="col-md-8">
-            <mat-tab label="REVIEW ORDER">
-              <div class="col-md-12" style="padding-top:15px !important">
+              <div class="col-md-12 mt-1" *ngFor="let productJson of productJson;let i=index">
+                  {{productJson | json}}
                 <div class="col-md-12">
-                  <div class="row" style="font-size: 13px;">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-3">Product Name/Code/Pack</div>
-                    <div class="col-md-1">Quantity</div>
-                    <div class="col-md-2">Tride Price</div>
-                    <div class="col-md-1">Savings</div>
-                    <div class="col-md-2">Net price</div>
-                  </div>
-                  <div class="col-md-12" *ngFor="let productJson of productJson;let i=index">
-
-                    <div class="col-md-12">
-                      <mat-card class="a2"  [ngStyle]="{'border-left-color':productJson.color}">
-                        <div class="row">
-                          <div class="col-md-2"> <img style="width:100px;height: 100px;"
-                              src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
-                          <div class="col-md-3">{{productJson.productName}}</div>
-                          <div class="col-md-2"><input type="text" class="form-control" [(ngModel)]="productJson.quantity" (ngModelChange)="onChange($event,productJson)" id="search-input"
-                            mdbInput></div>
-                            <div class="col-md-2">{{productJson.trideprice | currency}}</div>
-                            <div class="col-md-1">{{productJson.savings | currency}}</div>
-                            <div class="col-md-1">{{productJson.netprice | currency}}</div>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-12">
-                            <div style="cursor: pointer;    float: right !important;"
-                              (click)="removeItems(productJson,i)">
-                              RemoveItems
-                            </div>
-                          </div>
-
-                        </div>
-                      </mat-card>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-            </mat-tab>
-            <mat-tab label="WHOLESALER">
-              <div class="col-md-12 mt-5">
-                <div class="row">
-                  <div class="col-md-6">
-                      <mat-card class="cardwholesaler" (click)="selectedTab='Wholesaler'" [ngClass]="{wholesaler:selectedTab=='Wholesaler'}">
-                      <h4>Care Wholesaler</h4>
-                        <p>4299 Lafaryattle Drive<br/>
-                        #1880, Hyd</p>
-                      </mat-card>
-                  </div>
-                  <div class="col-md-6">
-                      <mat-card class="cardwholesaler" (click)="selectedTab='Appolo'" [ngClass]="{wholesaler:selectedTab=='Appolo'}">
-                            <h4>Appolo Wholesaler</h4>
-                            <p>4299 Lafaryattle Drive<br/>
-                            #1880, Hyd</p>
-                       
-                          
-                        </mat-card>
-                  </div>
-                </div>
-
-
-
-              </div>
-            </mat-tab>
-            <mat-tab label="ADDRESS ">
-                <div class="col-md-12 mt-5">
+                  <mat-card class="a2"  [ngStyle]="{'border-left-color':productJson.color}">
                     <div class="row">
-                      <div class="col-md-6">
-                          <mat-card class="cardwholesaler" (click)="selectedTab='ADDRESS1'" [ngClass]="{wholesaler:selectedTab=='ADDRESS1'}">
-                          <h4>Care Wholesaler</h4>
-                            <p>4299 Lafaryattle Drive<br/>
-                            #1880, Hyd</p>
-                          </mat-card>
-                      </div>
-                      <div class="col-md-6">
-                          <mat-card class="cardwholesaler" (click)="selectedTab='ADDRESS2'" [ngClass]="{wholesaler:selectedTab=='ADDRESS2'}">
-                                <h4>Appolo Wholesaler</h4>
-                                <p>4299 Lafaryattle Drive<br/>
-                                #1880, Hyd</p>
-                            </mat-card>
-                      </div>
+                      <div class="col-md-2"> <img style="width:100px;height: 100px;"
+                          src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
+                      <div class="col-md-3">{{productJson.productName}}</div>
+                      <div class="col-md-2"><input type="text" class="form-control" [(ngModel)]="productJson.quantity" (ngModelChange)="onChange($event,productJson)"
+                        mdbInput></div>
+                        <div class="col-md-2">{{productJson.trideprice | currency}}</div>
+                        <div class="col-md-1">{{productJson.savings | currency}}</div>
+                        <div class="col-md-1">{{productJson.netprice | currency}}</div>
                     </div>
-    
-    
-    
-                  </div>
-            </mat-tab>
-            <!-- <mat-tab label="PayMent ">
-              <div class="example-large-box mat-elevation-z4">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div style="cursor: pointer;    float: right !important;"
+                          (click)="removeItems(productJson,i)">
+                          RemoveItems
+                        </div>
+                      </div>
 
+                    </div>
+                  </mat-card>
+                </div>
               </div>
-            </mat-tab> -->
+
+            </div>
+      </div>
+
+      <div class="col-md-12" *ngIf="selectedTab===breadcrum[1]">
+        <div class="col-md-12 mt-2">
+         <h6 class="ml-5  mt-1">Select Wholesaler</h6>
+          <div class="col-md-12" *ngFor="let addressJson of addressJson">
+            <div class="row">
+              <div class="col-md-6" *ngFor="let shippingAddress of addressJson.shipping_address;let i=index">
+                <mat-card class="cardwholesaler" (click)="selectedtab1=i" [ngClass]="{wholesaler:selectedtab1==i}">
+                  <address>
+
+                    <b>{{shippingAddress.name}}</b><br/>
+                    {{shippingAddress.street_address}}<br/>
+                    {{shippingAddress.city}}, {{shippingAddress.state}}, {{shippingAddress.zip}}
+                  </address>
+
+                </mat-card>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        
+        </div>
+
+        <div class="col-md-12" *ngIf="selectedTab===breadcrum[2]">
+            <div class="col-md-12 mt-2">
+                <h6 class="ml-5  mt-1">Delivary Address</h6>
+                <div class="col-md-12" *ngFor="let addressJson of addressJson">
+                  <div class="row">
+                    <div class="col-md-6" *ngFor="let billingAddress of addressJson.billing_address;let i=index">
+                      <mat-card class="cardwholesaler" (click)="selectedtab2=i" [ngClass]="{wholesaler:selectedtab2==i}">
+                        <address>
+      
+                          <b>{{billingAddress.name}}</b><br/>
+                          {{billingAddress.street_address}}<br/>
+                          {{billingAddress.city}}, {{billingAddress.state}}, {{billingAddress.zip}}
+                        </address>
+      
+                      </mat-card>
+                    </div>
+                  </div>
+      
+                </div>
+              </div>
+        
           </div>
 
+          <div class="col-md-12" *ngIf="selectedTab===breadcrum[3]">
 
-        </div>
+        
+            </div>
 
-
-
-      </mat-tab-group>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
+      
+          <table mdbTable borderless="true" class="table tableAlignment">
 
-
-      <table mdbTable borderless="true" class="table tableAlignment">
-
-        <!--Table head-->
-        <thead>
-          <tr>
-            <th scope="col">PriceDetails</th>
-          </tr>
-        </thead>
-        <!--Table head-->
-
-        <!--Table body-->
-        <tbody>
-          <tr class="mt-2" mdbTableCol>
-            <td scope="row">Total MRP</td>
-            <td scope="row">$ 110</td>
-          </tr>
-          <tr class="mt-2" mdbTableCol>
-            <td scope="row">Discout</td>
-            <td scope="row" style="color:green">- $ 10</td>
-          </tr>
-          <tr class="mt-2" mdbTableCol>
-            <td scope="row">Est.Tax</td>
-            <td scope="row">+ $ 10</td>
-          </tr>
-          <tr class="mt-2" mdbTableCol style="border-bottom: 2px solid #dee2e6;">
-            <td scope="row">Delievery Charges</td>
-            <td style="color:green">free</td>
-          </tr>
-          <tr class="mt-2" mdbTableCol>
-            <td scope="row">Total</td>
-            <td></td>
-          </tr>
-          <tr class="btn-table">
-            <td rowspan="2">
-              <button type="button" class="btn btn-primary">Next</button>
-            </td>
-          </tr>
-        </tbody>
-
-      </table>
+              <!--Table head-->
+              <thead>
+                <tr>
+                  <th scope="col">PriceDetails</th>
+                </tr>
+              </thead>
+              <!--Table head-->
+      
+              <!--Table body-->
+              <tbody>
+                <tr class="mt-2" mdbTableCol>
+                  <td scope="row">Total MRP</td>
+                  <td scope="row">{{tridePrice | currency}}</td>
+                </tr>
+                <tr class="mt-2" mdbTableCol>
+                  <td scope="row">Discout</td>
+                  <td scope="row" style="color:green">{{savings | currency}}</td>
+                </tr>
+                <tr class="mt-2" mdbTableCol>
+                  <td scope="row">Est.Tax</td>
+                  <td scope="row">$ 0.0 </td>
+                </tr>
+                <tr class="mt-2" mdbTableCol style="border-bottom: 2px solid #dee2e6;">
+                  <td class="col-md-2">Delievery Charges</td>
+                  <td style="color:green">free</td>
+                </tr>
+                <tr class="mt-2" mdbTableCol>
+                  <td scope="row">Total</td>
+                  <td>{{total | currency}}</td>
+                  <td></td>
+                </tr>
+                <tr class="btn-table">
+                  <td rowspan="2">
+                    <button type="button" class="btn btn-primary" (click)="getNavigationMethod(selectedTab)">Next</button>
+                  </td>
+                </tr>
+              </tbody>
+      
+            </table>
+      
     </div>
   </div>
+
 </div>
