--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -51,9 +51,8 @@ width: 107%;">
       <div class="col-md-2">Net price</div>
   </div>
   <div class="col-md-12" *ngFor="let productJson of productJson | filter : searchText;let i=index">
-  
     <div class="col-md-12">
-        <mat-card  class="a2" [ngStyle]="{'border-left-color':productJson.color}">
+        <mat-card  class="a2" [ngStyle]="{'border-left-color':productJson.color}" attr.disabled="true">
             <div class="row">
             <div class="col-md-2" style="    margin-bottom: 7px;"> <img  style="width:130px;height: 100px;"src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
             <div class="col-md-3">{{productJson.productName}}</div>
@@ -62,7 +61,7 @@ width: 107%;">
             <div class="col-md-2">{{productJson.trideprice | currency}}</div>
             <div class="col-md-1">{{productJson.savings | currency}}</div>
             <div class="col-md-1">{{productJson.netprice | currency}}</div>
-            <div><img src="./assets/images/Cart_active.png" style="cursor: pointer" (click)="addCart(productJson,i)"></div>
+            <div><img src="./assets/images/Cart_active.png" style="cursor: pointer"  (click)="addCart(productJson,i)"></div>
           </div>
           <div class="row" style="margin-top: -42px;">
               <div class="col-md-2"></div>
