--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,12 @@
+
+
+html,body{height: 100%;}
+body{margin: 0;}
+
 .mat-card:not([class*=mat-elevation-z]) {
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
     border-bottom: 1px solid rgba(0, 0, 0, 0.14) !important;
 }
-@import '~bootstrap/dist/css/bootstrap.min.css';
-
 
 .mat-tab-label-container {
     align-items: center !important;
