--- a/src/app/products/product-list/product-list.component.scss
+++ b/src/app/products/product-list/product-list.component.scss
@@ -95,7 +95,7 @@ float: right;
 margin-top: -78px;
 }
 
-.a2{
+.matCardStyle{
   border-left-width: 5px !important;
   border-radius: 35px;
 margin-top: 15px }
