--- a/src/app/products/checkoutscreen/checkoutscreen.component.css
+++ b/src/app/products/checkoutscreen/checkoutscreen.component.css
@@ -76,3 +76,16 @@ border-color:  lightgreen;
 border-radius: 15px;
 color:lightgreen;
 }
+
+i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  float: right;
+}
