--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -12,17 +12,17 @@ width: 107%;">
 <div class="sample"style="z-index: 10;">
     <div class="a1" style="background-color: #fff">
 
-      <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='Product'}" (click)="selectedTab='Product';searchText ='allProducts'">
+      <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='product'}" (click)="navigationClick('product')">
         All Products
       </span>
-      <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='Promotions'}" (click)="selectedTab='Promotions';searchText ='promotions'">
+      <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='promotions'}" (click)="navigationClick('promotions')">
           Promotions
         </span>
-        <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='Discount'}" (click)="selectedTab='Discount'; searchText ='noDisCount'">
+        <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='discount'}" (click)="navigationClick('discount')">
             No Discount
           </span>
 
-          <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='Avalible'}" (click)="selectedTab='Avalible'">
+          <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='avalible'}" (click)="navigationClick('avalible')">
               Not Avalible
             </span>
       </div>
@@ -52,27 +52,50 @@ width: 107%;">
   </div>
   <div class="col-md-12" *ngFor="let productJson of productJson | filter : searchText;let i=index">
     <div class="col-md-12">
-        <mat-card  class="a2" [ngStyle]="{'border-left-color':productJson.color}" attr.disabled="true">
-            <div class="row">
-            <div class="col-md-2" style="    margin-bottom: 7px;"> <img  style="width:130px;height: 100px;"src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
-            <div class="col-md-3">{{productJson.productName}}</div>
-            <div class="col-md-1" ><input type="text" class="form-control" [(ngModel)]="productJson.quantity" (ngModelChange)="onChange($event,productJson)" id="search-input"
-              mdbInput></div>
-            <div class="col-md-2">{{productJson.trideprice | currency}}</div>
-            <div class="col-md-1">{{productJson.savings | currency}}</div>
-            <div class="col-md-1">{{productJson.netprice | currency}}</div>
-            <div><img src="./assets/images/Cart_active.png" style="cursor: pointer"  (click)="addCart(productJson,i)"></div>
-          </div>
-          <div class="row" style="margin-top: -42px;">
-              <div class="col-md-2"></div>
-              <div class="col-md-4">Product Information Test comes here</div>
-              <div class="col-md-2"></div>
-              <div class="col=md-2"></div>
-              <div class="col-md-2" [ngStyle]="{'color':productJson.color}"> Discount: {{productJson.discount | currency}} </div>
-          </div>
+        <mat-card  class="matCardStyle" [ngStyle]="{'border-left-color':productJson.color}" attr.disabled="true">
+            <div *ngIf="productJson.quantity === null ||  productJson.quantity === ''">
+                <div class="row">
+                    <div class="col-md-2" style="    margin-bottom: 7px;"> <img  style="width: 124px;height: 66px;" src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
+                    <div class="col-md-3">{{productJson.productName}}</div>
+                    <div class="col-md-1" ><input type="text" class="form-control" [(ngModel)]="productJson.quantity" (ngModelChange)="onChange($event,productJson)" id="search-input"
+                      mdbInput></div>
+                    <div class="col-md-5">Enter quantity to generate price details</div>
+                   
+                    <div><img src="./assets/images/Cart_deactive.png"></div>
+                  </div>
+
+                  <div class="row" style="">
+                      <div class="col-md-2"></div>
+                      <div class="col-md-8">Product Information Test comes here</div>
+                      <div class="col-md-2"></div>
+                  </div>
+
+            </div>
+
+            <div *ngIf="productJson.quantity !== null && productJson.quantity !== ''">
+
+                <div class="row">
+                    <div class="col-md-2" style="margin-bottom: 7px;"> <img  style="width: 124px;height: 66px;" src="https://cdn.pixabay.com/photo/2015/11/06/15/13/internet-1028794__340.jpg"></div>
+                    <div class="col-md-3">{{productJson.productName}}</div>
+                    <div class="col-md-1" ><input type="text" class="form-control" [(ngModel)]="productJson.quantity" (ngModelChange)="onChange($event,productJson)" id="search-input"
+                      mdbInput></div> 
+                    <div class="col-md-2">{{productJson.tridePrice | currency}}</div>
+                    <div class="col-md-1">{{productJson.savings | currency}}</div>
+                    <div class="col-md-2">{{productJson.netPrice | currency}}</div>
+                    <div class="col-md-1"><img src="./assets/images/Cart_active.png" style="cursor: pointer"  (click)="addCart(productJson,i)"></div>
+                  </div>
+                  <div class="row" style="mt-2">
+                      <div class="col-md-2"></div> 
+                      <div class="col-md-4">Product Information Test comes here</div>
+                      <div class="col-md-2"></div>
+                      <div class="col=md-2"></div>
+                      <div class="col-md-2" [ngStyle]="{'color':productJson.color}"> Discount: {{productJson.discount | currency}} </div>
+                  </div>
+  
+            </div>
           </mat-card>
-     
   </div>
 </div>
-  
+
 </div>
+
